# PythonProject5

./: .env.template  .flake8  .gitignore  api.py  config.py  database.py  db_manager.py  main.py  pyproject.toml  readme.md  user_interface.py
src/: __init__.py  api.py  database.py  db_manager.py  main.py  utils.py
src/hh_vacancies/: __init__.py  main.py
src/hh_vacancies/api/: __init__.py  api.py
src/hh_vacancies/database/: __init__.py  db_manager.py
src/hh_vacancies/services/: __init__.py
src/hh_vacancies/utils/: __init__.py  config.py  helpers.py
tests/: conftest.py  test_api.py  test_database.py  test_utils.py
