[tool.poetry]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = ["imbon <i.m.bondarev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
